--- a/风险类型.md
+++ b/风险类型.md
@@ -3,11 +3,14 @@
 2. 使用不规范、误导性或商业化词汇，诱导用户下载。
 3. 应用信息与实际功能不符，导致用户被误导。
 4. 使用不恰当或敏感内容（如色情、暴力等），影响用户体验或违反法律法规。
+5. UGC相关风险
+6. 应用含有虚假信息或广告，诱导用户消费或进行欺诈
 
 # 安全风险
 1. 含有病毒、木马等恶意代码，危害用户设备或隐私。
 2. 在用户不知情或未授权的情况下进行恶意操作，如发送付费短信、窃取数据。
 3. 通过隐蔽手段进行非法行为，如远程控制、加密货币挖矿、广告刷量等。
+4. 其他
 
 # 功能兼容性风险
 1. 应用在不同设备或网络环境下不兼容，影响用户正常使用。
@@ -17,20 +20,17 @@
 # 隐私与权限滥用风险
 1. 在未经用户授权的情况下，滥用或过度请求权限，如访问联系人、相机、位置信息等。
 2. 未提供合理的权限说明，导致用户不知情的隐私泄露。
-
-# 内容质量与合规风险
-1. 内容低质或重复，缺乏实用性和创新性，如简单打包的网站页面。
-2. 在应用上架后通过技术手段展示违规内容，规避审核。
-3. 应用含有虚假信息或广告，诱导用户消费或进行欺诈。
+3. 隐私政策相关问题
+4. 其他（索权相关问题）
 
 # 广告与推送信息风险
 1. 广告或推送信息频繁且无法关闭，干扰用户体验。
 2. 应用推送无关内容或隐藏发送者身份，误导用户。
 3. 锁屏广告或通知模仿系统消息，诱导用户点击。
+4. 弹窗相关问题
+5. 恶意广告相关问题（存在具体恶意行为）
 
 # 更新与审核绕过风险
 1. 应用绕过平台审核机制进行自动更新，导致未审核代码上线。
 2. 通过技术手段在审核后更新或修改功能，规避平台审查。
-
-
-https://support.google.com/googleplay/android-developer/topic/9877466?hl=zh-Hans&ref_topic=9858052,9857238,2856718,&sjid=16441879824817618682-NC
+3. 在应用上架后通过技术手段展示违规内容，规避审核
